[gd_scene load_steps=2 format=3 uid="uid://cwnl2v7xhbqkb"]

[ext_resource type="Script" path="res://scripts/ui/combo_display.gd" id="1_combo"]

[node name="ComboDisplay" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 40.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
script = ExtResource("1_combo")

[node name="ComboLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -20.0
offset_right = 150.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "0 COMBO!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
max_value = 100.0
value = 100.0
show_percentage = false
